Made improvements requested by the TSE.

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <link rel="shortcut icon" href="assets/favicon.png" type="image/x-icon">
 </head>
 <body class="bg-light">
-  <div class="main-container container col-12 col-xl-8 col-lg-12 p-0">
+  <div class="main-container container-fluid col-12 col-xl-9 col-lg-12 p-0 w-100">
     <header class="nav-container container-fluid col-sm-12 col-md-12 col-lg-12 col-xl-12 p-0 m-0 shadow">
       <nav class="navbar red-nav m-0">
         <div class="weather-date d-sm-none d-md-none d-lg-block text-white">
@@ -30,7 +30,7 @@
           <svg width="3em" height="3em" viewbox="0 0 16 16" class="bi bi-person-fill" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
           <path fill-rule="evenodd" d="M3 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1H3zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6z"></path></svg>
         </div>
-        <div class="login-subscribe col-xs-4 ml-4">
+        <div class="login-subscribe col-xs-4 ml-lg-4 ml-md-5">
           <a class="d-md-inline-block" href="#">LOGIN</a> <button type="button" class="btn btn-warning rounded-pill">SUBSCRIBE</button>
         </div>
         <div class="burger-menu d-lg-none col-xs-1">
@@ -149,13 +149,6 @@
                   <p class="card-text text-secondary">What's the most critical move the next president should make to restore the country's economic health? Newsweek asked 12 top financial experts to offer the next occupant of the White House their best advice.</p>
                 </div>
               </div>
-              <div class="card-horizontal p-3">
-                <div class="card-img-left"></div>
-                <div class="card-body-right">
-                  <h6 class="card-title font-weight-bolder p-2 p-xl-2 p-md-2 m-xl-0">Massive Stimulus Spending Is the Only Fix for Ailing Economy, Experts Say</h6>
-                  <p class="card-text p-xl-2 p-md-2 p-2 text-secondary">What's the most critical move the next president should make to restore the country's economic health? Newsweek asked 12 top financial experts to offer the next occupant of the White House their best advice.</p>
-                </div>
-              </div>
               <div class="container my-turn pt-1">
                 <span class="column-title">MY TURN</span>
                 <div class="row">
@@ -219,9 +212,9 @@
                 <hr>
                 <div class="card mb-3 p-0 border-0">
                   <div class="row no-gutter">
-                    <div class="col-md-2 col-lg-3 px-md-0 px-lg-0"><img src="https://d.newsweek.com/en/full/1655362/donald-trump-2020-election-rally.webp?w=790&amp;f=65fe4ccdfb244abbffb0c33c26eb7255" class="card-img img-fluid" alt="..."></div>
+                    <div class="col-md-2 col-lg-3 px-md-0 p-lg-0 pr-lg-1"><img src="https://d.newsweek.com/en/full/1655362/donald-trump-2020-election-rally.webp?w=790&amp;f=65fe4ccdfb244abbffb0c33c26eb7255" class="card-img img-fluid" alt="..."></div>
                     <div class="col-md-10 col-lg-9 p-0">
-                      <div class="card-body mt-md-3 mt-lg-0 px-3 border-0">
+                      <div class="card-body p-lg-0 mt-md-3 mt-lg-0 px-3 border-0">
                         <h6 class="card-title font-weight-bolder text-black mb-xl-0 pr-xl-4">Trump Has More Campaign Volunteers than Obama Ever Did and Democrats Worry</h6>
                         <p class="card-text text-secondary">The president's data-driven campaign workers want to know if you go to church or have a hunting or fishing license. Here's why.</p>
                       </div>
@@ -231,15 +224,136 @@
                 <hr class="border-top">
                 <div class="card mb-3 p-0 border-0">
                   <div class="row no-gutter">
-                    <div class="col-md-2 col-lg-3"><img src="https://d.newsweek.com/en/full/1655502/iran-sanctions-us-cruel-currency-muslims.webp?w=790&amp;f=cd668e5f45dc1778af55fa07090ae2bd" class="card-img" alt="..."></div>
+                    <div class="col-md-2 col-lg-3 px-md-0 px-lg-0 pr-lg-1"><img src="https://d.newsweek.com/en/full/1655502/iran-sanctions-us-cruel-currency-muslims.webp?w=790&amp;f=cd668e5f45dc1778af55fa07090ae2bd" class="card-img" alt="..."></div>
                     <div class="col-md-10 col-lg-9 p-0">
-                      <div class="card-body mt-md-3 mt-lg-0 px-3 border-0">
+                      <div class="card-body p-lg-0 mt-md-3 mt-lg-0 px-3 border-0">
                         <h6 class="card-title font-weight-bolder text-black mb-xl-0 pr-xl-4">Iran Speaker Says Muslim Nations Must Unite Against 'Cruel' U.S. Sanctions</h6>
                         <p class="card-text text-secondary">Iranian officials have condemned the U.S. for imposing additional rounds of sanctions even as the country grapples with the COVID-19 pandemic.</p>
                       </div>
                     </div>
                   </div>
                 </div>
+                <hr class="border-top">
+                <div class="card mb-3 p-0 border-0">
+                  <div class="row no-gutter">
+                    <div class="col-md-2 col-lg-3 px-md-0 p-lg-0 pr-lg-1"><img src="https://d.newsweek.com/en/full/1655362/donald-trump-2020-election-rally.webp?w=790&amp;f=65fe4ccdfb244abbffb0c33c26eb7255" class="card-img img-fluid" alt="..."></div>
+                    <div class="col-md-10 col-lg-9 p-0">
+                      <div class="card-body p-lg-0 mt-md-3 mt-lg-0 px-3 border-0">
+                        <h6 class="card-title font-weight-bolder text-black mb-xl-0 pr-xl-4">Trump Has More Campaign Volunteers than Obama Ever Did and Democrats Worry</h6>
+                        <p class="card-text text-secondary">The president's data-driven campaign workers want to know if you go to church or have a hunting or fishing license. Here's why.</p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <hr class="border-top">
+                <div class="card mb-3 p-0 border-0">
+                  <div class="row no-gutter">
+                    <div class="col-md-2 col-lg-3 px-md-0 px-lg-0 pr-lg-1"><img src="https://d.newsweek.com/en/full/1655502/iran-sanctions-us-cruel-currency-muslims.webp?w=790&amp;f=cd668e5f45dc1778af55fa07090ae2bd" class="card-img" alt="..."></div>
+                    <div class="col-md-10 col-lg-9 p-0">
+                      <div class="card-body p-lg-0 mt-md-3 mt-lg-0 px-3 border-0">
+                        <h6 class="card-title font-weight-bolder text-black mb-xl-0 pr-xl-4">Iran Speaker Says Muslim Nations Must Unite Against 'Cruel' U.S. Sanctions</h6>
+                        <p class="card-text text-secondary">Iranian officials have condemned the U.S. for imposing additional rounds of sanctions even as the country grapples with the COVID-19 pandemic.</p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <hr class="border-top">
+                <div class="card mb-3 p-0 border-0">
+                  <div class="row no-gutter">
+                    <div class="col-md-2 col-lg-3 px-md-0 p-lg-0 pr-lg-1"><img src="https://d.newsweek.com/en/full/1655362/donald-trump-2020-election-rally.webp?w=790&amp;f=65fe4ccdfb244abbffb0c33c26eb7255" class="card-img img-fluid" alt="..."></div>
+                    <div class="col-md-10 col-lg-9 p-0">
+                      <div class="card-body p-lg-0 mt-md-3 mt-lg-0 px-3 border-0">
+                        <h6 class="card-title font-weight-bolder text-black mb-xl-0 pr-xl-4">Trump Has More Campaign Volunteers than Obama Ever Did and Democrats Worry</h6>
+                        <p class="card-text text-secondary">The president's data-driven campaign workers want to know if you go to church or have a hunting or fishing license. Here's why.</p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <hr class="border-top">
+                <div class="card mb-3 p-0 border-0">
+                  <div class="row no-gutter">
+                    <div class="col-md-2 col-lg-3 px-md-0 px-lg-0 pr-lg-1"><img src="https://d.newsweek.com/en/full/1655502/iran-sanctions-us-cruel-currency-muslims.webp?w=790&amp;f=cd668e5f45dc1778af55fa07090ae2bd" class="card-img" alt="..."></div>
+                    <div class="col-md-10 col-lg-9 p-0">
+                      <div class="card-body p-lg-0 mt-md-3 mt-lg-0 px-3 border-0">
+                        <h6 class="card-title font-weight-bolder text-black mb-xl-0 pr-xl-4">Iran Speaker Says Muslim Nations Must Unite Against 'Cruel' U.S. Sanctions</h6>
+                        <p class="card-text text-secondary">Iranian officials have condemned the U.S. for imposing additional rounds of sanctions even as the country grapples with the COVID-19 pandemic.</p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <hr class="border-top">
+                <div class="card mb-3 p-0 border-0">
+                  <div class="row no-gutter">
+                    <div class="col-md-2 col-lg-3 px-md-0 p-lg-0 pr-lg-1"><img src="https://d.newsweek.com/en/full/1655362/donald-trump-2020-election-rally.webp?w=790&amp;f=65fe4ccdfb244abbffb0c33c26eb7255" class="card-img img-fluid" alt="..."></div>
+                    <div class="col-md-10 col-lg-9 p-0">
+                      <div class="card-body p-lg-0 mt-md-3 mt-lg-0 px-3 border-0">
+                        <h6 class="card-title font-weight-bolder text-black mb-xl-0 pr-xl-4">Trump Has More Campaign Volunteers than Obama Ever Did and Democrats Worry</h6>
+                        <p class="card-text text-secondary">The president's data-driven campaign workers want to know if you go to church or have a hunting or fishing license. Here's why.</p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <hr class="border-top">
+                <div class="card mb-3 p-0 border-0">
+                  <div class="row no-gutter">
+                    <div class="col-md-2 col-lg-3 px-md-0 px-lg-0 pr-lg-1"><img src="https://d.newsweek.com/en/full/1655502/iran-sanctions-us-cruel-currency-muslims.webp?w=790&amp;f=cd668e5f45dc1778af55fa07090ae2bd" class="card-img" alt="..."></div>
+                    <div class="col-md-10 col-lg-9 p-0">
+                      <div class="card-body p-lg-0 mt-md-3 mt-lg-0 px-3 border-0">
+                        <h6 class="card-title font-weight-bolder text-black mb-xl-0 pr-xl-4">Iran Speaker Says Muslim Nations Must Unite Against 'Cruel' U.S. Sanctions</h6>
+                        <p class="card-text text-secondary">Iranian officials have condemned the U.S. for imposing additional rounds of sanctions even as the country grapples with the COVID-19 pandemic.</p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <hr class="border-top">
+                <div class="card mb-3 p-0 border-0">
+                  <div class="row no-gutter">
+                    <div class="col-md-2 col-lg-3 px-md-0 p-lg-0 pr-lg-1"><img src="https://d.newsweek.com/en/full/1655362/donald-trump-2020-election-rally.webp?w=790&amp;f=65fe4ccdfb244abbffb0c33c26eb7255" class="card-img img-fluid" alt="..."></div>
+                    <div class="col-md-10 col-lg-9 p-0">
+                      <div class="card-body p-lg-0 mt-md-3 mt-lg-0 px-3 border-0">
+                        <h6 class="card-title font-weight-bolder text-black mb-xl-0 pr-xl-4">Trump Has More Campaign Volunteers than Obama Ever Did and Democrats Worry</h6>
+                        <p class="card-text text-secondary">The president's data-driven campaign workers want to know if you go to church or have a hunting or fishing license. Here's why.</p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <hr class="border-top">
+                <div class="card mb-3 p-0 border-0">
+                  <div class="row no-gutter">
+                    <div class="col-md-2 col-lg-3 px-md-0 px-lg-0 pr-lg-1"><img src="https://d.newsweek.com/en/full/1655502/iran-sanctions-us-cruel-currency-muslims.webp?w=790&amp;f=cd668e5f45dc1778af55fa07090ae2bd" class="card-img" alt="..."></div>
+                    <div class="col-md-10 col-lg-9 p-0">
+                      <div class="card-body p-lg-0 mt-md-3 mt-lg-0 px-3 border-0">
+                        <h6 class="card-title font-weight-bolder text-black mb-xl-0 pr-xl-4">Iran Speaker Says Muslim Nations Must Unite Against 'Cruel' U.S. Sanctions</h6>
+                        <p class="card-text text-secondary">Iranian officials have condemned the U.S. for imposing additional rounds of sanctions even as the country grapples with the COVID-19 pandemic.</p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <hr class="border-top">
+                <div class="card mb-3 p-0 border-0">
+                  <div class="row no-gutter">
+                    <div class="col-md-2 col-lg-3 px-md-0 p-lg-0 pr-lg-1"><img src="https://d.newsweek.com/en/full/1655362/donald-trump-2020-election-rally.webp?w=790&amp;f=65fe4ccdfb244abbffb0c33c26eb7255" class="card-img img-fluid" alt="..."></div>
+                    <div class="col-md-10 col-lg-9 p-0">
+                      <div class="card-body p-lg-0 mt-md-3 mt-lg-0 px-3 border-0">
+                        <h6 class="card-title font-weight-bolder text-black mb-xl-0 pr-xl-4">Trump Has More Campaign Volunteers than Obama Ever Did and Democrats Worry</h6>
+                        <p class="card-text text-secondary">The president's data-driven campaign workers want to know if you go to church or have a hunting or fishing license. Here's why.</p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <hr class="border-top">
+                <div class="card mb-3 p-0 border-0">
+                  <div class="row no-gutter">
+                    <div class="col-md-2 col-lg-3 px-md-0 px-lg-0 pr-lg-1"><img src="https://d.newsweek.com/en/full/1655502/iran-sanctions-us-cruel-currency-muslims.webp?w=790&amp;f=cd668e5f45dc1778af55fa07090ae2bd" class="card-img" alt="..."></div>
+                    <div class="col-md-10 col-lg-9 p-0">
+                      <div class="card-body p-lg-0 mt-md-3 mt-lg-0 px-3 border-0">
+                        <h6 class="card-title font-weight-bolder text-black mb-xl-0 pr-xl-4">Iran Speaker Says Muslim Nations Must Unite Against 'Cruel' U.S. Sanctions</h6>
+                        <p class="card-text text-secondary">Iranian officials have condemned the U.S. for imposing additional rounds of sanctions even as the country grapples with the COVID-19 pandemic.</p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <hr class="border-top">
               </div>
             </div>
           </div>
@@ -772,7 +886,7 @@
           </div>
         </div>
         <div class="container bg-white col-12 col-lg-12 max-width p-0">
-          <div class="row col-12 col-xl-12 bg-white m-0 p-0">
+          <div class="row col-12 col-xl-12 col-lg-12 col-md-12 col-sm-12 bg-white m-0 p-0">
             <div class="col-12 col-md-12 col-lg-8 px-2">
               <h5 class="card-title text-danger pl-lg-2">SUBSCRIBE</h5>
               <div class="card mb-3 p-2 border-0 bg-light">
@@ -784,7 +898,7 @@
                   <div class="col-md-8 pb-6">
                     <div class="card-body">
                       <h4 class="font-weight-bolder">In-depth Stories You Don't See Elsewhere About Topics You Want to Read!</h4>
-                      <p class="card-text">All Access + Weekly Delivery. Choose A Membership That's Perfect for You!</p><a href="#" class="btn btn-danger rounded col-lg-4 font-weight-bolder">SUBSCRIBE</a>
+                      <p class="card-text">All Access + Weekly Delivery. Choose A Membership That's Perfect for You!</p><a href="#" class="btn btn-danger rounded col-lg-4 col-md-4 font-weight-bolder">SUBSCRIBE</a>
                     </div>
                   </div>
                 </div>
@@ -800,9 +914,9 @@
                     <div class="card-body py-lg-0">
                       <h3 class="font-weight-bolder">The Starting 5</h3>
                       <p class="card-text">See why nearly a quarter of a million subscribers begin their day with the Starting 5.</p>
-                      <form>
-                        <input type="email" placeholder="Email Address" class="col-12 mb-2 mb-md-1 mb-lg-1">
-                        <button type="button" class="btn-danger border-0 rounded col-12 mt-lg-2">
+                      <form class="d-md-flex flex-lg-column">
+                        <input type="email" placeholder="Email Address" class="col-12 col-md-6 col-lg-12 mb-2 mb-md-1 mb-lg-1">
+                        <button type="button" class="btn-danger border-0 rounded col-12 col-md-6 col-lg-12 mt-lg-2">
                           <span class="text-white font-weight-bolder">FREE SIGN UP</span>
                         </button>
                       </form>
@@ -916,6 +1030,5 @@
       </nav>
     </footer>
   </div>
-  <script src="assets/js/animations.js"></script>
 </body>
 </html>
