Fixed issues on the Trending section for the navbar as per TSE's request.

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </head>
 <body class="bg-light">
   <div class="main-container container-fluid col-12 col-xl-9 col-lg-12 p-0 w-100">
-    <header class="nav-container container-fluid col-sm-12 col-md-12 col-lg-12 col-xl-12 p-0 m-0 shadow">
+    <header class="nav-container container-fluid col-sm-12 col-md-12 col-lg-12 col-xl-12 p-0 m-0">
       <nav class="navbar red-nav m-0">
         <div class="weather-date d-sm-none d-md-none d-lg-block text-white">
           <span class="weather font-weight-bolder"><i class="fas fa-cloud"></i> 28° Managua, NI</span> <p class="date">Mon, Oct 19, 2020</p>
@@ -82,25 +82,25 @@
         <ul class="nav">
           <li class="nav-item"><span class="nav-link text-black">TRENDING</span></li>
           <li class="nav-item">
-            <a class="nav-link text-secondary hover-red px-lg-3 px-xl-2" href="#">DONALD TRUMP</a>
+            <a class="nav-link text-secondary hover-red p-md-2 px-lg-3 px-xl-2" href="#">DONALD TRUMP</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link text-secondary px-lg-3 px-xl-2" href="#">JOE BIDEN</a>
+            <a class="nav-link text-secondary px-lg-3 p-md-2 px-xl-2" href="#">JOE BIDEN</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link text-secondary px-lg-3 px-xl-2" href="#">STIMULUS PACKAGE</a>
+            <a class="nav-link text-secondary px-lg-3 p-md-2 px-xl-2" href="#">STIMULUS PACKAGE</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link text-secondary px-lg-3 px-xl-2" href="#">CORONAVIRUS</a>
+            <a class="nav-link text-secondary px-lg-3 p-md-2 px-xl-2" href="#">CORONAVIRUS</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link text-secondary px-lg-3 px-xl-2" href="#">AMY CONEY BARRETT</a>
+            <a class="nav-link text-secondary px-lg-3 p-md-2 px-xl-2" href="#">AMY CONEY BARRETT</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link text-secondary px-lg-3 px-xl-2" href="#">2020 ELECTION</a>
+            <a class="nav-link text-secondary px-lg-3 p-md-2 px-xl-2" href="#">2020 ELECTION</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link text-secondary px-lg-3 px-xl-2" href="#">COUNTIES THAT COUNT</a>
+            <a class="nav-link text-secondary px-lg-3 p-md-2 px-xl-2" href="#">COUNTIES THAT COUNT</a>
           </li>
         </ul>
       </div><!--Three Column Section Starts Here-->
