--- a/index.html
+++ b/index.html
@@ -2,17 +2,11 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Newsweek - News, Analysis, Politics, Business, Technology</title>
   <link rel="stylesheet" href="assets/bootstrap-4.5.3-dist/css/bootstrap.min.css">
-  <link rel="stylesheet" href="assets/bootstrap-4.5.3-dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/css/style.css">
-  <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-  <script src="assets/bootstrap-4.5.3-dist/js/bootstrap.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.2/TweenLite.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.2/TimelineLite.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.2/plugins/CSSPlugin.min.js"></script>
   <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous">
   <link rel="shortcut icon" href="assets/favicon.png" type="image/x-icon">
 </head>
@@ -1030,4 +1024,6 @@
     </footer>
   </div>
 </body>
+<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+<script src="assets/bootstrap-4.5.3-dist/js/bootstrap.min.js"></script>
 </html>
