Fix spacing issue. All changes done.

--- a/index.html
+++ b/index.html
@@ -11,17 +11,18 @@
   <link rel="shortcut icon" href="assets/favicon.png" type="image/x-icon">
 </head>
 <body class="bg-light">
-  <div class="main-container container-fluid col-12 col-xl-9 col-lg-12 p-0 w-100">
+  <div class="main-container container-fluid col-12 col-xl-11 col-lg-12 p-0">
     <header class="nav-container container-fluid col-sm-12 col-md-12 col-lg-12 col-xl-12 p-0 m-0">
       <nav class="navbar red-nav m-0">
         <div class="weather-date d-sm-none d-md-none d-lg-block text-white">
           <span class="weather font-weight-bolder"><i class="fas fa-cloud"></i> 28° Managua, NI</span> <p class="date">Mon, Oct 19, 2020</p>
         </div>
         <div class="col-xs-3 col-xs-5 col-sm-5 col-md-8 col-lg-4 p-0 logo-link">
-          <a class="navbar-brand" href="https://www.newsweek.com/"><img class="img-fluid" id="newsweek-logo" src="https://upload.wikimedia.org/wikipedia/commons/d/db/Newsweek_Logo.svg" alt="Newsweek Logo"></a>
+          <a class="navbar-brand" href="https://www.newsweek.com/">
+            <img class="img-fluid" id="newsweek-logo" src="assets/logo.png" alt="Newsweek Logo"></a>
         </div>
         <div class="user-icon d-md-none d-lg-none col-xs-1 ml-4">
-          <svg width="3em" height="3em" viewbox="0 0 16 16" class="bi bi-person-fill" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+          <svg width="3em" height="3em" viewbox="0 0 16 16" class="bi bi-person-fill" fill="white" xmlns="http://www.w3.org/2000/svg">
           <path fill-rule="evenodd" d="M3 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1H3zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6z"></path></svg>
         </div>
         <div class="login-subscribe col-xs-4 ml-lg-4 ml-md-5">
@@ -1023,7 +1024,7 @@
       </nav>
     </footer>
   </div>
+  <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+  <script src="assets/bootstrap-4.5.3-dist/js/bootstrap.min.js"></script>
 </body>
-<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-<script src="assets/bootstrap-4.5.3-dist/js/bootstrap.min.js"></script>
 </html>
